# Team2-CBA-Project

./: .editorconfig  .env.example  .gitattributes  .gitignore  .ingestion_progress_custom_15.json  .ingestion_progress_extended.json  100_PERCENT_ACCURACY_ACHIEVED.md  100_PERCENT_SOURCE_COMPLETENESS.md  20_SHOWCASE_PROMPTS.md  =0.5.0  ACCURACY_100_PERCENT_PROOF.md  ACCURACY_EXECUTIVE_SUMMARY.md  ACCURACY_FINAL_PROOF.md  ACCURACY_METRICS_DETAILED.md  ACCURACY_STATS_FOR_SLIDES.md  ACCURACY_TESTING_SUMMARY.md  ACCURACY_VERIFICATION_SLIDES.md  ALL_SOURCES_ENABLED.md  BENCHMARKOS_SLIDE.md  CHANGELOG.md  CLIENT_SHOWCASE_PROMPTS.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ACCURACY_FIX_SUMMARY.md  CONTRIBUTING.md  CRITICAL_ACCURACY_FIX.md  CRITICAL_ISSUE_SUMMARY.md  CURRENT_UI_OVERVIEW.md  CUSTOM_KPI_BUILDER_GUIDE.md  DASHBOARD_DECISION_TREE.md  DATA_RETRIEVAL_FIX_PLAN.md  ENABLE_FRED_GUIDE.md  FINAL_COMPREHENSIVE_UPDATE.md  FINAL_NAN_FIX_COMPLETE.md  FINAL_SP500_ALL_KPIS_REPORT.md  FINAL_TEST_RESULTS.md  FINANCIAL_PROMPTS_ENHANCEMENT_COMPLETE.md  FINANCIAL_PROMPTS_GUIDE.md  FIX_CHATBOT_ACCURACY_ISSUE.md  FORMATTING_BUG_FIX.md  GITHUB_PUSH_COMPLETE.md  (+141 more)
.embeddings_cache/: embedding_config.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  REPOSITORY_SETTINGS.md  SECURITY.md  SUPPORT.md  pull_request_template.md  release.yml
.pytest_cache/: tmp.txt
api/: index.py
app/: run_server.py  serve_chatbot.py
cache/: edgar_tickers.json
core/: final_improvements_report.md  final_ticker_improvements_report.md  text_normalization_report.md  ticker_resolution_analysis_report.md  ultimate_ticker_improvements_report.md
data/: sample_financials.csv
docs/: ARCHITECTURE_TECHNICAL_FLOW.md  CBA_POSTER_CONDENSED.md  CHANGELOG.md  CLIENT_DEMO_PROMPTS.md  COMPARISON_QUICK_REFERENCE.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_UPDATE_SUMMARY.md  DASHBOARD_SOURCES_DISPLAY_FIX.md  DASHBOARD_SOURCES_INSTRUCTIONS.md  DATABASE_DATA_SUMMARY.md  DATA_INGESTION_PLAN.md  ENHANCED_ROUTING.md  EXPAND_DATA_GUIDE.md  EXTENDED_INGESTION_INFO.md  FINAL_ORGANIZATION_STATUS.md  GITHUB_ORGANIZATION_COMPLETE.md  HALLUCINATION_FIX.md  NLU_USER_GUIDE.md  PATTERN_EXPANSION_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  QUICK_REFERENCE.md  RAG_COMPLETE_GUIDE.md  RAG_COMPLETE_SYSTEM.md  (+17 more)
(+721 files in other folders)
